# ats

./: .gitignore  .travis.yml  Dockerfile  Makefile  README.md  README_IB.md  export.sh  pyproject.toml  requirements.txt  requirements_slim.txt  setup.cfg  setup.py  training.ipynb
.github/: test_runner.yml
.github/workflows/: test_runner.yml
ATS/ATS/: ContentView.swift
ATS/ATS.xcodeproj/: project.pbxproj
ATS/ATSUITests/: ATSUITests.swift  ATSUITestsLaunchTests.swift
akolo_ats/snscrape/: example.py
akolo_ats/twitter-scraper-selenium/: example.py  nohup.out
conf/: build_search.yaml  config.yaml~  dev.yaml  dev_daily.yaml  dev_tft_daily.yaml  dev_weekly.yaml  eval_dev.yaml  search.yaml  single_asset_daily_train.yaml  single_asset_full_futures.yaml  single_asset_full_futures_train.yaml  single_asset_mini_futures_train.yaml  single_asset_simulation.yaml  single_asset_train.yaml  start_search_server.yaml  test.yaml  test_dev.yaml  test_intg.yaml
conf/dataset/: es.yaml  es_daily.yaml  es_weekly.yaml  future.yaml  future_dev.yaml  future_intg.yaml  future_prod.yaml  future_test.yaml  futures.yaml  futures_daily.yaml  mini_futures.yaml  mini_futures_daily.yaml
conf/features/: dev.yaml  prod.yaml  test.yaml
conf/job/: build_search.yaml  dev.yaml  eval.yaml  eval_dev.yaml  intg.yaml  search.yaml  simulation.yaml  start_search_server.yaml  test.yaml  test_dev.yaml  train.yaml  train_prod.yaml
conf/model/: nhits.yaml  patch_tft_supervised_dev.yaml  patch_tft_supervised_single_asset_full_futures.yaml  patch_tft_supervised_single_asset_full_futures_v2.yaml  patch_tft_supervised_single_asset_full_futures_v2.yaml~  patch_tft_supervised_test.yaml
conf/optimizer/: adam.yaml
conf/trading/: dev.yaml  dev.yaml~
data/: download_tweet.py  sp.csv  us.csv
data/nitter_tweet_ids/: DougKass.csv  spy_2010-01-01T00:00:00_2010-01-02T00:00:00.csv  spy_2010-01-02T00:00:00_2010-01-03T00:00:00.csv  spy_2010-01-03T00:00:00_2010-01-04T00:00:00.csv  spy_2010-01-04T00:00:00_2010-01-05T00:00:00.csv  spy_2010-01-05T00:00:00_2010-01-06T00:00:00.csv  spy_2010-01-06T00:00:00_2010-01-07T00:00:00.csv  spy_2010-01-07T00:00:00_2010-01-08T00:00:00.csv  spy_2010-01-08T00:00:00_2010-01-09T00:00:00.csv  spy_2010-01-09T00:00:00_2010-01-10T00:00:00.csv  spy_2010-01-10T00:00:00_2010-01-11T00:00:00.csv  spy_2010-01-11T00:00:00_2010-01-12T00:00:00.csv  (+15 more)
docs/: cheatsheet.txt
examples/: =1.1.4  =1.72.37  ledger_example.ipynb  quantstats-tearsheet.html  renderers_and_plotly_chart.ipynb  train_and_evaluate.ipynb  use_attentionnet_rllib.ipynb
flutter_twitter_clone/: pubspec.yaml
model/: single_asset_fixed_features.ckpt  single_asset_mini_futures.ckpt  test_dev.ckpt
notebook/: ngrok-tricks.ipynb  training.ipynb
scripts/: download_bar.py  download_hist.py  download_hist.py.bak  download_tweet.py  download_tweet.sh  fut_trade_files.sh  get_tick.py  ib_contract.py  ib_test.py  install_gcloud.sh  live_news.py  query_contract.py  read_xls.py  test_calendar.py  test_trading_calendar.py
src/: version.py
tensortrade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+38363 files in other folders)
