[tool.poetry]
name = "ats"
version = "0.1.0"
description = ""
authors = ["Jianjun Chen <jianjun00@gmail.com>"]
readme = "README.md"
packages = [{include = "ats", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
