[tool.poetry]
name = "ats"
version = "0.1.0"
description = ""
authors = ["Jianjun Chen <jianjun00@gmail.com>"]
readme = "README.md"
packages = [
	 {include = "ats", from = "src"},
	 {include = "pytorch_forecasting", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.24.4"
torch = "2.0.1"
hydra = "^2.5"
omegaconf = "^2.3.0"
pandas-market-calendars = "^4.1.4"
empyrical = "^0.5.5"
lightning = "^2.0.5"
optuna = "^3.2.0"
pyarrow = "^12.0.1"
ray = "^2.5.1"
ta = "^0.10.2"
plotly = "^5.15.0"
pytorch-optimizer = "^2.11.0"
wandb = "0.15.3"
dask = "2023.5.0"
ray-lightning = "^0.3.0"
hydra-core = "^1.3.2"
transformers = "^4.30.2"
cvxpy = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
